// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class query can query in bulk 1`] = `
Object {
  "data": Object {
    "bulkClasses": Array [
      Object {
        "classId": "3500",
        "latestOccurrence": Object {
          "termId": "201930",
        },
        "name": "OOD",
        "subject": "CS",
      },
      Object {
        "classId": "2500",
        "latestOccurrence": Object {
          "termId": "201930",
        },
        "name": "Fundamentals of Computer Science 1",
        "subject": "CS",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`class query gets all occurrences 1`] = `
Object {
  "data": Object {
    "class": Object {
      "allOccurrences": Array [
        Object {
          "termId": "201930",
        },
        Object {
          "termId": "201830",
        },
      ],
      "name": "Fundamentals of Computer Science 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`class query gets latest occurrence 1`] = `
Object {
  "data": Object {
    "class": Object {
      "latestOccurrence": Object {
        "termId": "201930",
      },
      "name": "Fundamentals of Computer Science 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`class query gets specific occurrence 1`] = `
Object {
  "data": Object {
    "class": Object {
      "name": "Fundamentals of Computer Science 1",
      "occurrence": Object {
        "termId": "201930",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`class query gets the name of class from subject and classId 1`] = `
Object {
  "data": Object {
    "class": Object {
      "name": "Fundamentals of Computer Science 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`classByHash query gets class from class hash 1`] = `
Object {
  "data": Object {
    "classByHash": Object {
      "classId": "2500",
      "name": "Fundamentals of Computer Science 1",
      "subject": "CS",
      "termId": "201830",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`sectionByHash query gets section from section id 1`] = `
Object {
  "data": Object {
    "sectionByHash": Object {
      "campus": "Boston",
      "classId": "2500",
      "classType": "Lecture",
      "crn": "12345",
      "honors": false,
      "meetings": Object {},
      "seatsCapacity": 5,
      "seatsRemaining": 2,
      "subject": "CS",
      "termId": "201830",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
